fix: Altera z-index do gradiente do cabeçalho hero

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,6 +35,7 @@ html {
 	position: absolute;
 	left: 0;
 	top: 0;
+	z-index: -1;
 }
 
 .hero-menu {
